Added genetic algorithm to Swarm class

--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -19,6 +19,9 @@ log_transform_sim_data=0
 divide_by_init=0
 objfunc=2
 keep_parents=1
+swap_rate=0.5
+extra_weight=0
+force_different_parents = false;
 
 random_var=KD1 0 60.428898
 random_var=km1 0 57.459326
