Genetic algorithm bugfixes

--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -21,11 +21,12 @@ objfunc=2
 keep_parents=1
 swap_rate=0.5
 extra_weight=0
-force_different_parents = false;
+force_different_parents = true;
+delete_old_files=0
 
-random_var=KD1 0 60.428898
-random_var=km1 0 57.459326
-random_var=K2RT 0 52.4578514
-random_var=km2 0 82.9043918
-random_var=kphos 0 82.9043918
-random_var=kdephos 0 82.9043918
+loguniform_var=KD1 0.001 1000
+loguniform_var=km1 0.001 1000
+loguniform_var=K2RT 0.001 1000
+loguniform_var=km2 0.001 1000
+loguniform_var=kphos 0.001 1000
+loguniform_var=kdephos 0.001 1000
