Fixed breeding, fixed loguniform generation, fixed several bugs in Model and Configuration classes. Breeding is hella slow

--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -1,15 +1,15 @@
-model = example3.bngl
-exp = example3.exp
+model = example5.bngl
+exp = example5.exp
 output_dir = output/
 
-generations = 1
-swarm_size = 10
+generations = 5
+swarm_size = 50
 minfit = 0
 synchronicity = 1
 swarm_type = genetic
 use_pipes = 0
 use_cluster = 0
-parallel_count = 3
+parallel_count = 2
 type=genetic
 verbosity=3
 standardize_sim_data=0
@@ -22,6 +22,8 @@ swap_rate=0.5
 extra_weight=0
 force_different_parents = true;
 delete_old_files=0
+
+mutate=default 0.1 0.1
 
 loguniform_var=KD1 0.001 1000
 loguniform_var=km1 0.001 1000
