Added method for gathering cluster information. Added method for slurm submission command generation.

--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -8,7 +8,7 @@ minfit = 0
 synchronicity = 1
 swarm_type = genetic
 use_pipes = 0
-use_cluster = 0
+use_cluster = 1
 parallel_count = 2
 type=genetic
 verbosity=1
@@ -22,6 +22,7 @@ swap_rate=0.5
 extra_weight=0
 force_different_parents = true;
 delete_old_files=0
+cluster_parallel=4
 
 mutate=default 0.2 0.1
 
