--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -1,7 +1,9 @@
 model = example5.bngl
 exp = example5.exp
 output_dir = output/
+sim_path = /home/brandon/projects/GenFit/Simulators/
 
+job_name=example5
 generations = 50
 swarm_size = 10
 minfit = 0
@@ -11,7 +13,7 @@ use_pipes = 1
 use_cluster = 0
 parallel_count = 1
 type=genetic
-verbosity=1
+verbosity=3
 standardize_sim_data=0
 standardize_exp_data=0
 log_transform_sim_data=0
