All PSO varaibles are now loaded and initialized properly. Except maybe the particle maps?

--- a/Debug/test.conf
+++ b/Debug/test.conf
@@ -28,6 +28,22 @@ cluster_parallel=4
 max_num_simulations=1000;
 max_fit_time=00:02:00
 
+inertia=0.72
+cognitive = 1.49
+social = 1.49
+nmax = 20
+nmin = 80
+inertiaInit = 1
+inertiaFinal = 0.1
+absTolerance = 10e-4
+relTolerance = 10e-4
+
+topology; // fullyconnected
+psoType; // bbpso
+
+enhancedStop; // true
+enhancedInertia; // true
+
 mutate=default 0.2 0.1
 
 loguniform_var=KD1 0.001 1000
