--- a/Debug/makefile
+++ b/Debug/makefile
@@ -39,19 +39,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: GenFit2
+all: BioNetFit
 
 # Tool invocations
-GenFit2: $(OBJS) $(USER_OBJS)
+BioNetFit: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	mpic++ -L/usr/lib -o "GenFit2" $(OBJS) $(USER_OBJS) $(LIBS)
+	mpic++  -o "BioNetFit" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) GenFit2
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) BioNetFit
 	-@echo ' '
 
 .PHONY: all clean dependents
