--- a/Debug/example5/test.conf
+++ b/Debug/example5/test.conf
@@ -1,32 +1,31 @@
-model = example5.bngl
-exp = example5.exp
+model = /home/brandon/projects/BioNetFit/Debug/example5/example5.bngl
+exp = /home/brandon/projects/BioNetFit/Debug/example5/example5.exp
 output_dir = output/
 sim_path = /home/brandon/projects/GenFit/Simulators/
 
 job_name=example5
-generations = 50
-swarm_size = 10
+generations = 2
+swarm_size = 3
 minfit = 0
 synchronicity = 1
 swarm_type = genetic
-use_pipes = 1
+use_pipes = 0
 use_cluster = 0
-parallel_count = 1
-type=genetic
+parallel_count = 3
 verbosity=3
 standardize_sim_data=0
 standardize_exp_data=0
 log_transform_sim_data=0
 divide_by_init=0
 objfunc=1
-keep_parents=1
+keep_parents=0
 swap_rate=0.5
 extra_weight=0
-force_different_parents = true;
+force_different_parents = 1;
 delete_old_files=0
-cluster_parallel=4
 max_num_simulations=1000;
 max_fit_time=00:02:00
+smoothing=2
 
 inertia=0.72
 cognitive = 1.49
@@ -38,7 +37,7 @@ inertiaFinal = 0.1
 absTolerance = 10e-4
 relTolerance = 10e-4
 
-topology = fullyconnected
+topology = tree
 psoType = pso
 
 enhancedStop = true
