Started consistency checker. Started general code cleanup.

--- a/Debug/example5/test.conf
+++ b/Debug/example5/test.conf
@@ -1,14 +1,14 @@
 model = /home/brandon/projects/BioNetFit/Debug/example5/example5.bngl
 exp = /home/brandon/projects/BioNetFit/Debug/example5/example5.exp
 output_dir = output/
-sim_path = /home/brandon/projects/GenFit/Simulators/
+bng_command = /home/brandon/projects/GenFit/Simulators/
 
 job_name=example5
-generations = 2
-swarm_size = 3
+max_generations = 2
+swarm_size = 2
 minfit = 0
 synchronicity = 1
-swarm_type = genetic
+fit_type = genetic
 use_pipes = 0
 use_cluster = 0
 parallel_count = 3
