--- a/Debug/example5/test.conf
+++ b/Debug/example5/test.conf
@@ -1,12 +1,13 @@
 model = /home/brandon/projects/BioNetFit/Debug/example5/example5.bngl
 exp = /home/brandon/projects/BioNetFit/Debug/example5/example5.exp
 output_dir = output/
-bng_command = /home/brandon/projects/GenFit/Simulators/
+bng_command = /home/brandon/projects/GenFit/Simulators/BNG2.PL
 
 job_name=example5
 max_generations = 2
 swarm_size = 10
-minfit = 0
+min_fit = 0
+#max_fit = 100000
 synchronicity = 1
 fit_type = genetic
 use_pipes = 0
@@ -25,7 +26,7 @@ force_different_parents = 1;
 delete_old_files=0
 max_num_simulations=1000;
 max_fit_time=00:02:00
-smoothing=2
+smoothing=3
 
 inertia=0.72
 cognitive = 1.49
