AGA works. I think. Simple model fits fine but TLBR seems completely renadom. Debugging.

--- a/Debug/example5/test.conf
+++ b/Debug/example5/test.conf
@@ -1,32 +1,33 @@
 model = /home/brandon/projects/BioNetFit/Debug/example5/example5.bngl
-exp = /home/brandon/projects/BioNetFit/Debug/example5/example5.exp
+exp_file = /home/brandon/projects/BioNetFit/Debug/example5/example5.exp
 output_dir = output/
-bng_command = /home/brandon/projects/GenFit/Simulators/BNG2.PL
+bng_command = /home/brandon/projects/GenFit/Simulators/BNG2.pl
 
 job_name=example5
-max_generations = 2
+max_generations = 10
 swarm_size = 10
 min_fit = 0
 #max_fit = 100000
-synchronicity = 1
+synchronicity = 0
 fit_type = genetic
 use_pipes = 0
 use_cluster = 0
 parallel_count = 3
-verbosity=3
+verbosity=1
 standardize_sim_data=0
 standardize_exp_data=0
 log_transform_sim_data=0
 divide_by_init=0
 objfunc=1
-keep_parents=1
+keep_parents=0
 swap_rate=0.8
 extra_weight=0
 force_different_parents = 1;
 delete_old_files=0
 max_num_simulations=1000;
 max_fit_time=00:02:00
-smoothing=3
+smoothing=1
+output_every=10
 
 inertia=0.72
 cognitive = 1.49
