Added bootstrapping functionality

--- a/Debug/example5/test.conf
+++ b/Debug/example5/test.conf
@@ -4,16 +4,16 @@ output_dir = output/
 bng_command = /home/brandon/projects/GenFit/Simulators/BNG2.pl
 
 job_name=example5
-max_generations = 10
-swarm_size = 12
+max_generations = 3
+swarm_size = 5
 min_fit = 0
 #max_fit = 100000
 synchronicity = 1
-fit_type = de
+fit_type = genetic
 use_pipes = 0
 use_cluster = 0
 parallel_count = 3
-verbosity=1
+verbosity=3
 standardize_sim_data=0
 standardize_exp_data=0
 log_transform_sim_data=0
@@ -28,7 +28,11 @@ max_num_simulations=500;
 max_fit_time=00:02:00
 smoothing=1
 output_every=10
-num_islands=3
+num_islands=2
+bootstrap=3
+mutate_type=1
+migration_frequency=2
+num_to_migrate=1
 
 inertia=0.72
 cognitive = 1.49
