--- a/bin/makefile
+++ b/bin/makefile
@@ -39,13 +39,13 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: GenFit2
+all: BioNetFit
 
 # Tool invocations
-GenFit2: $(OBJS) $(USER_OBJS)
+BioNetFit: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	mpic++ -L/usr/lib -o "GenFit2" $(OBJS) $(USER_OBJS) $(LIBS)
+	mpic++ -L/usr/lib -o "BioNetFit" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
