Bugfixes and Config checker work

--- a/examples/example/example5.conf
+++ b/examples/example/example5.conf
@@ -3,39 +3,39 @@ exp_file = examples/example/example5.exp
 output_dir = output/
 bng_command = Simulators/BNG2.pl
 
-job_name=test
+#job_name=test
 
 # Should be set to numberof CPU cores in cluster minus 1
-swarm_size = 120
+population_size = 10
 
 # In synchronous ga, maximim number of generations to run
-max_generations= 100
+max_generations= 3
 
 # Stop when we reach this objective function value
 min_fit = 0
 
 # 1/0 = synchronous/asynchronous
-synchronicity = 0
+synchronicity = 1
 
 # ga = genetic algorithm
 # de = differential evolution
 # sa = simulated annealing
 # pso = particle swarm
-fit_type = sa
+fit_type = ga
 
 use_pipes = 1
 
 # Whether or not we're using a cluster
-use_cluster = 1
+use_cluster = 0
 
 # Cluster software (can be mpi, slurm, or torque)
 cluster_software=mpi
 
 # On non-cluster fits, how many sims to run at once
-parallel_count = 100
+parallel_count = 2
 
 # Verbosity
-verbosity=1
+verbosity=3
 
 # Whether or not to standardize simulation outputs
 standardize_sim_data=0
@@ -119,7 +119,7 @@ inertiaFinal = 0.1
 abs_tolerance = 10e-4
 rel_tolerance = 10e-4
 
-# Mutation type in qpso
+# Whether or not to enable mutations in QPSO
 mutate_qpso = 1
 
 # Swarm topology in PSO, or island migration topology in DE, can be:
